--- a/style.css
+++ b/style.css
@@ -11,9 +11,13 @@
 body{
     margin: 0;
     padding: 0%;
-    color: var(--primary);
+    color: black;
     background-color: var(--secondary);
     line-height: 1.5;
+}
+
+body h2{
+    color: var(--primary);
 }
 
 h1,
@@ -26,6 +30,7 @@ h6{
 }
 
 p{
+    padding-left: 20px;
     margin: 0;
 }
 
@@ -36,6 +41,8 @@ header {
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
+    position: sticky;
+    position: -webkit-sticky;
     background-color: var(--primary);
     box-shadow: 0 5px 35px rgba(146, 204, 206, 0.4);
 }
@@ -47,7 +54,9 @@ header h1{
     margin: 0;
     font-size: 5ww;
     line-height: 1;
-    font-style: inherit;
+    font-weight: bold;
+    text-shadow: 0 0 10px var(--tertiary);
+    
 }
 
 nav{
@@ -61,7 +70,7 @@ nav a {
     padding: 5px 10px;
     color: var(--secondary);
     margin-right: 10px;
-    
+    font-size: 20px;
 }
 
 nav a:hover{
@@ -87,6 +96,15 @@ main{
 
 .hero-banner div{
     flex: 0 0 90%;
+    background-image: url();
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 .page-wrapper {
@@ -109,9 +127,12 @@ main{
     flex: 0 0 20%;
     text-align: right;
     padding-right: 15%;
-    border-right: 5px solid rgb(10, 186, 181);
-    font-size: 5ww;
+    border-right: 5px solid var(--primary);
+    font-size: 30px;
     line-height: 1.5;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+
 }
 
 .page-section div {
@@ -129,31 +150,34 @@ main{
 }
 
 .flex-item{
-    border: 3px solid rgb(10, 186, 181);
-    background-color: rgba(61, 61, 61, 0.89);
-    color: rgb(255, 255, 255);
+    border: 3px solid var(--tertiary);
+    background-color: var(--tertiary);
+    color: var(--secondary);
     min-height: 150px;
     max-height: 150px;
     display: flex;
     align-items: flex-end;
+    flex-basis: calc(50% - 1.6rem);
     padding: 0 0 20px 0;
     margin: 0.5em;
     text-decoration: none;
+    background-blend-mode: soft-light;
     background-size: 150%;
+    transition: all 0.5s;
     font-size: 0.9rem;
 }
 
 .flex-item:first-child {
     min-height: 400px;
-    flex-basis: 100%;
+    flex-basis: 95.5%;
 }
 
 .flex-item:hover{
-    background-color: rgb(10, 186, 181);
+    background-color: var(--primary);
 }
 
 .flex-item div{
-    background-color: rgba(61, 61, 61, 0.89);
+    background-color: var(--tertiary);
     padding: 8px 10px;
 }
 
@@ -170,9 +194,24 @@ main{
 }
 
 .contact address a{
-    color: rgb(10, 186, 181);
+    color: var(--primary);
     padding: 5px;
     text-decoration: none;
     font-style: normal;
+    font-size: 1.3rem;
     background-image: linear-gradient(270deg var (var(--primary) 0% var(--primary) 100%));
+    background-repeat: no-repeat;
+    background-size: 100% 0.2em;
+    background-position: bottom;
+    transition: all 0.5s ease-in;
+    margin: 0 0 0.2rem 0.1rem;
+    display: inline-block;
+}
+
+.contact address a:hover{
+    background-size: 100% 88%;
+    color: var(--tertiary);
+}
+#runbuddy{
+    background-image: url("../Projects/runBuddy/");
 }
