--- a/style.css
+++ b/style.css
@@ -44,7 +44,9 @@ header {
     align-items: center;
     position: sticky;
     background-color: var(--primary);
+    background-image: linear-gradient();
     box-shadow: 0 5px 35px rgba(146, 204, 206, 0.4);
+    height: 150px;
 }
 
 header h1{
@@ -55,13 +57,35 @@ header h1{
     font-size: 50px;
     line-height: 1;
     font-weight: bold;
-    font-style: oblique;
+    font-style: normal;
 }
 
 nav{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    margin: 6px 0;
+    transition: 0.4s;
+    background-color: var(--primary);
+}
+.change .bar1{
+    -webkit-transform: rotate(-45deg)
+    translate(-9px, 6px);
+    transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {
+    opacity: 0;
+}
+
+.change .bar3 {
+        -webkit-transform: rotate(45deg)
+        translate(-8px, -8px);
+        transform: rotate(45deg) translate(-8px, -8px);
 }
 
 nav a {
@@ -89,8 +113,7 @@ main{
 }
 
 .hero-banner{
-    background: var(--tertiary);
-    background-image: url("./public/images/abstract-black-white-bokeh-background_1962-1324.jpg");
+    background: white;
     background-size: cover;
     background-position: center;
     min-height: 30vh;
@@ -98,6 +121,19 @@ main{
     display: flex;
     align-items: flex-end;
     font-size: 50px;
+    height: 30
+    0px;
+}
+
+.hero-banner h2{
+    color: var(--tertiary);
+    font-family: Montserrat,sans-serif;
+}
+
+.hero-banner p {
+    font-size: 35px;
+    font-style: normal;
+    opacity: 70%;
 }
 
 .hero-banner div{
@@ -115,9 +151,9 @@ main{
 }
 
 .page-wrapper {
-    max-width: 88%;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 100%;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .page-section{
@@ -130,24 +166,48 @@ main{
     justify-content: space-between;
 }
 
-.page-section > h2 {
-    flex: 0 0 20%;
-    text-align: initial ;
-    padding-right: 15%;
-    color: var(--primary);
-    border-bottom: 3px solid var(--primary);
-    background-position: center;
-    background-size: cover;
+#about{
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-    font-size: 50px;
-    line-height: 1.5;
-    margin-bottom: 20px ;
-    padding-bottom: 0 0 ;
-    
+    height: 500px;
+    margin-bottom: 10px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    background-image: url(./public/images/abstract-black-white-bokeh-background_1962-1324.jpg);
+    background-position: 0 0, 50% 50%;
+    background-position-x:0px, 50%;
+    background-position-y: 0px, 50%;
+    background-size: 100%;
+    background-attachment: scroll, fixed;
 }
+
+.page-section h2 {
+    margin-bottom: 10px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    -webkit-box-pack: end;
+    justify-content: flex-end;
+    -webkit-box-align: start;
+    align-items: flex-start;
+    transition: color .4s;
+    transition-property: var(--tertiary);
+    transition-duration: 0.4s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+    font-size: 60px;
+    line-height: 66px;
+    font-weight: 900;
+    text-align: center;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-family: Montserrat,sans-serif;
+}
+
 .page-section img{
     height: 300px;
     width: 300px;
@@ -168,35 +228,177 @@ main{
     font-size: 23px;
 }
 
+
+
 .flex-container{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 90vw;
+    width: 100vw;
+}
+
+.surf-report{
+    display: flex;
+    height: 500px;
+    margin-bottom: 0px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    background-image: url(./public/images/surf-report.jpg);
+    background-position: 0 0, 50% 50%;
+    background-position-x:0px, 50%;
+    background-position-y: 0px, 50%;
+    background-size: 100%;
+    background-attachment: scroll, fixed;
+}
+
+
+.report-btn{
+    width: auto;
+    margin-right: 20px;
+    margin-left: 20px;
+    border: 0px transparent;
+    border-radius: 5px;
+    background-color: var(--primary);
+    background-image: linear-gradient(135deg, #007c79 41%, #a80aba);
+    font-size: 22px;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+.led-wall{
+    display: flex;
+    height: 500px;
+    margin-bottom: 0px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    background-image: url(./public/images/Led-wall.jpg);
+    background-position: 0 0, 50% 50%;
+    background-position-x:0px, 50%;
+    background-position-y: 0px, 50%;
+    background-size: 100%;
+    background-attachment: scroll, fixed;
+}
+
+.auto-log{
+    display: flex;
+    height: 470px;
+    margin-bottom: 0px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    background-image: url(./public/images/auto-maintenance-log.png);
+    background-position: 0 0, 50% 50%;
+    background-position-x:0px, 50%;
+    background-position-y: 0px, 50%;
+    background-size: 100%;
+    background-attachment: scroll, fixed;
+}
+
+.e720{
+    display: flex;
+    height: 500px;
+    margin-bottom: 0px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    background-image: url(./public/images/ent720.png);
+    background-position: 0 0, 50% 50%;
+    background-position-x:0px, 50%;
+    background-position-y: 0px, 50%;
+    background-size: 100%;
+    background-attachment: scroll, fixed;
+}
+
+.run-buddy{
+    display: flex;
+    height: 400px;
+    margin-bottom: 10px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    background-image: url(./public/images/flipped-hero-image.jpg);
+    background-position: 0 0, 50% 50%;
+    background-position-x:0px, 50%;
+    background-position-y: 0px, 50%;
+    background-size: 100%;
+    background-attachment: scroll, fixed;
+}
+
+#work h3{
+    display: flex;
+    margin-bottom: 5px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    -webkit-box-pack: end;
+    justify-content: flex-end;
+    -webkit-box-align: start;
+    align-items: flex-start;
+    font-family: Montserrat,sans-serif;
+    color: var(--primary);
+    font-size: 60px;
+    line-height: 66px;
+    font-weight: 900;
+    text-align: center;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
+#work span{
+    display: flex;
+    margin-bottom: 10px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    -webkit-box-pack: end;
+    justify-content: flex-end;
+    -webkit-box-align: start;
+    align-items: flex-start;
+    font-family: Montserrat,sans-serif;
+    color: var(--primary);
+    font-size: 30px;
+    line-height: 66px;
+    font-weight: 900;
+    text-align: center;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
+#work a{
+    text-decoration: none;
+}
+
+#work a:hover{
+    text-decoration: underline;
 }
 
 .flex-item{
-    background-color: var(--tertiary);
-    color: var(--secondary);
-    min-height: 150px;
-    max-height: 150px;
-    display: flex;
-    align-items: center;
-    flex-basis: calc(50% - 1.6rem);
-    padding: 0 0 0 0;
-    margin: 0.5em;
-    text-decoration: none;
-    background-blend-mode: soft-light;
-    background-size: 150%;
-    transition: all 0.5s;
-    font-size: 0.9rem;
-    border-radius: 7px;
-}
-
-.flex-item:first-child {
     min-height: 400px;
     flex-basis: 97%;
 }
+
 
 .flex-item:hover{
     background-color: var(--primary);
@@ -208,7 +410,8 @@ main{
 }
 
 .flex-item h3{
-    font-size: 1.6rem;
+    font-size: 50px;
+    color: var(--tertiary);
 }
 
 footer address{
@@ -229,6 +432,7 @@ footer{
     background-color: var(--primary);
     background-size: cover;
     width: 100%;
+    height: 150px;
 }
 footer h2{
     color: var(--secondary);
@@ -237,6 +441,7 @@ footer h2{
     font-size: 50px;
     line-height: 1;
     font-weight: bold;
+    font-family: Montserrat,sans-serif;
 }
 
 footer address a{
@@ -258,37 +463,6 @@ footer address a:hover{
 }
 footer a:last-child{
     margin-right: 0;
-}
-
-#runbuddy{
-    background: url(./public/images/flipped-hero-image.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%
-}
-
-
-#entertainment-720{
-    background: url(./public/images/720.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
-}
-
-#auto-maintenance-log{
-    background: url(./public/images/auto-maintenance-log.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
-}
-
-#led-wall{
-    background: url(./public/images/Led-wall.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
-}
-
-#surf-report{
-    background: url(./public/images/surf-report.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
 }
 
 @media screen and (max-width: 980px){
@@ -326,6 +500,29 @@ footer a:last-child{
     }
     header nav{
         font-size: 25;
+    }
+    #about{
+        width: auto;
+        display: inherit;
+    }
+    #about p{
+        font-size: 20px;
+    }
+    .auto-log{
+        height: 350px;
+        margin-bottom: 0px;
+    }
+    .e720{
+        height: 400px;
+    }
+    .run-buddy{
+        height: 300px;
+    }
+    footer{
+        height: 250px;
+    }
+    nav{
+        align-self: center;
     }
 }
 
