--- a/style.css
+++ b/style.css
@@ -1,173 +1,189 @@
-*{
-    box-sizing: border-box;
+@charset "UTF-8";
+/*!
+* Start Bootstrap - Agency v6.0.5 (https://startbootstrap.com/theme/agency)
+* Copyright 2013-2021 Start Bootstrap
+* Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-agency/blob/master/LICENSE)
+*/
+/*!
+ * Bootstrap v4.6.0 (https://getbootstrap.com/)
+ * Copyright 2011-2021 The Bootstrap Authors
+ * Copyright 2011-2021 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE) */
+
+
+.container{
+  width: 100%;
 }
 
-:root{
-    --primary: rgb(10, 186, 181);
-    --secondary: rgb(255, 254, 254);
-    --tertiary: rgba(61, 61, 61, 0.89)
+.container h1{
+  font-size: 40px;
+  font-family: Montserrat,sans-serif;
+  color: #7DF9FF;
 }
 
-body{
-    margin: 0;
-    padding: 0%;
-    color: black;
-    background-color: var(--secondary);
-    line-height: 1.5;
-    align-content: center;
+.navbar {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+  height: 10vh;
+}
+.navbar .container,
+.navbar .container-fluid,
+.navbar .container-sm,
+.navbar .container-md,
+.navbar .container-lg,
+.navbar .container-xl {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+.navbar-brand {
+  display: inline-block;
+  padding-top: 0.3125rem;
+  padding-bottom: 0.3125rem;
+  margin-right: 1rem;
+  font-size: 1.25rem;
+  line-height: inherit;
+  white-space: nowrap;
+}
+.navbar-brand:hover, .navbar-brand:focus {
+  text-decoration: none;
 }
 
-body h2{
-    color: var(--primary);
+.navbar-nav {
+  display: flex;
+  flex-direction: column;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+.navbar-nav .nav-link {
+  padding-right: 0;
+  padding-left: 0;
+}
+.navbar-nav .dropdown-menu {
+  position: static;
+  float: none;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6{
-    margin: 0;
+.navbar-text {
+  display: inline-block;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
-p{
-    padding-left: 20px;
-    margin: 0;
+.navbar-collapse {
+  flex-basis: 100%;
+  flex-grow: 1;
+  align-items: center;
 }
 
-header {
-    padding: 15px 6% 15px 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    align-items: center;
-    position: sticky;
-    background-color: var(--primary);
-    background-image: linear-gradient();
-    box-shadow: 0 5px 35px rgba(146, 204, 206, 0.4);
-    height: 150px;
+.navbar-toggler {
+  padding: 0.25rem 0.75rem;
+  margin-right: 10px;
+  font-size: 40px;
+  line-height: 1;
+  background-color: transparent;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+  color: #7DF9FF;
+}
+.navbar-toggler:hover, .navbar-toggler:focus {
+  text-decoration: none;
 }
 
-header h1{
-    color: var(--secondary);
-    background-color: var(--primary);
-    padding: 5px 1% 5px 6%;
-    margin: 0;
-    font-size: 50px;
-    line-height: 1;
-    font-weight: bold;
-    font-style: normal;
+.navbar-toggler-icon {
+  display: inline-block;
+  width: 1.5em;
+  height: 1.5em;
+  vertical-align: middle;
+  content: "";
+  background: 50%/100% 100% no-repeat;
 }
 
-nav{
-    display: inline-block;
-    cursor: pointer;
+.navbar-nav-scroll {
+  max-height: 75vh;
+  overflow-y: auto;
 }
 
-.bar1, .bar2, .bar3 {
-    width: 35px;
-    height: 5px;
-    margin: 6px 0;
-    transition: 0.4s;
-    background-color: var(--primary);
-}
-.change .bar1{
-    -webkit-transform: rotate(-45deg)
-    translate(-9px, 6px);
-    transform: rotate(-45deg) translate(-9px, 6px);
+nav h1{
+  color: var(--secondary);
+  background-color: var(--primary);
+  padding: 5px 1% 5px 3%;
+  margin: 0;
+  font-size: 30px;
+  line-height: 1;
+  font-weight: bold;
+  font-style: normal;
 }
 
-.change .bar2 {
-    opacity: 0;
-}
-
-.change .bar3 {
-        -webkit-transform: rotate(45deg)
-        translate(-8px, -8px);
-        transform: rotate(45deg) translate(-8px, -8px);
+#navbarResponsive{
+  display: inline-block;
+  cursor: pointer;
 }
 
 nav a {
-    text-decoration: none;
-    padding: 5px 10px;
-    color: var(--secondary);
-    margin-right: 10px;
-    font-size: 25px;
+  text-decoration: none;
+  padding: 5px 10px;
+  color: var(--secondary);
+  margin-right: 10px;
+  font-size: 25px;
 }
 
 nav a:hover{
-    background-size: 100% 100%;
-    color: var(--primary);
-    background-color: var(--secondary);
+  background-size: 100% 100%;
 }
 
-
 nav a:last-child{
-    margin-right: 0;
+  margin-right: 0;
 }
 
 main{
-    margin-top: 20px;
-    margin-bottom: 45px;
+  margin-top: 20px;
+  margin-bottom: 45px;
 }
 
-.hero-banner{
-    background: white;
-    background-size: cover;
-    background-position: center;
-    min-height: 30vh;
-    padding: 5% 6%;
-    display: flex;
-    align-items: flex-end;
-    font-size: 50px;
-    height: 30
-    0px;
+.hero{
+  background-size: cover;
+  background-position: center;
+  min-height: 70vh;
+  padding: 5% 5%;
+  display: flex;
+  align-items: center;
+  font-size: 50px;
 }
 
-.hero-banner h2{
-    color: var(--tertiary);
-    font-family: Montserrat,sans-serif;
+.hero h2{
+  color: #7DF9FF;
+  font-family: Montserrat,sans-serif;
 }
 
-.hero-banner p {
-    font-size: 35px;
-    font-style: normal;
-    opacity: 70%;
-}
-
-.hero-banner div{
-    flex: 0 0 90%;
-    background-image: url();
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    background-attachment: fixed;
-    background-position: 80%;
-    text-align: center;
-}
-
-.page-wrapper {
-    max-width: 100%;
-    margin-left: 0;
-    margin-right: 0;
+.hero div{
+  flex: 0 0 90%;
+  background-image: url();
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  background-attachment: fixed;
+  background-position: 80%;
+  text-align: center;
 }
 
 .page-section{
-    margin: 25px 0;
-    padding: 10px 0;
-    display: inline-block;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
+  max-width: 100%;
+  padding:  0;
+  
 }
 
 #about{
-    display: flex;
+  display: flex;
     height: 500px;
     margin-bottom: 10px;
     -webkit-box-orient: vertical;
@@ -185,8 +201,78 @@ main{
     background-attachment: scroll, fixed;
 }
 
+p{
+  display: flex;
+  padding-left: 20px;
+  margin: 0;
+  font-size: 25px;
+  line-height: 1.5;
+  color: rgb(2, 2, 2);
+  text-align: center;
+}
+
 .page-section h2 {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  flex-direction: column;
+  -webkit-box-pack: end;
+  justify-content: flex-end;
+  -webkit-box-align: start;
+  align-items: flex-start;
+  transition: color .4s;
+  transition-property: var(--tertiary);
+  transition-duration: 0.4s;
+  transition-timing-function: ease;
+  transition-delay: 0s;
+  font-size: 60px;
+  line-height: 66px;
+  font-weight: 900;
+  text-align: center;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-family: Montserrat,sans-serif;
+  color: #7DF9FF;
+}
+
+.page-section div {
+  flex: 0 0 77%;
+}
+
+.page-section h3{
+  margin: 0 0 20px 0;
+  padding-left: 20px;
+  padding-right: 7px;
+  display: flex;
+  font-size: 40px;
+  color: white; 
+}
+
+.portfolio-hover h3{
+  margin-bottom: 10px;
+  margin-top: 11px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    -webkit-box-pack: end;
+    justify-content: flex-end;
+    -webkit-box-align: start;
+    transition: color .4s;
+    transition-duration: 0.4s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+    font-size: 50px;
+    line-height: 66px;
+    font-weight: 900;
+    text-align: center;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-family: Montserrat,sans-serif;
+    color: #7DF9FF;
+}
+
+.portfolio-hover span{
+  margin-bottom: 10px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     flex-direction: column;
@@ -195,51 +281,52 @@ main{
     -webkit-box-align: start;
     align-items: flex-start;
     transition: color .4s;
-    transition-property: var(--tertiary);
     transition-duration: 0.4s;
     transition-timing-function: ease;
     transition-delay: 0s;
-    font-size: 60px;
+    font-size: 30px;
     line-height: 66px;
-    font-weight: 900;
+    font-weight: 500;
     text-align: center;
     letter-spacing: 1px;
     text-transform: uppercase;
     font-family: Montserrat,sans-serif;
+    color:#7DF9FF;
 }
 
-.page-section img{
-    height: 300px;
-    width: 300px;
-    flex-basis: 40%;
-    float: right;
-
+.portfolio-hover button{
+  width: auto;
+  padding: 9px 18px;
+  margin-right: 20px;
+  margin-left: 20px;
+  border: 0 transparent;
+  border-radius: 5px;
+  background-color: #00c1cc;
+  background-image: linear-gradient(135deg,#00c1cc 30%,#313131 90%);
+  -webkit-transition: opacity .2s,color .4s,background-color .4s;
+  transition: opacity .2s,color .4s,background-color .4s;
+  font-family: Montserrat,sans-serif;
+  font-size: 22px;
+  font-weight: 500;
+  text-transform: uppercase;
 }
 
-.page-section div {
-    flex: 0 0 77%;
+.page-section button:hover{
+  background-color: #7DF9FF;
+  background-image: linear-gradient(145deg,#f702b9 20%, #161616 100%);
+  color: white;
 }
 
-.page-section p{
-    margin: 0 0 20px 0;
-    padding-left: 20px;
-    padding-right: 7px;
-    display: flex;
-    font-size: 23px;
-}
-
-
-
-.flex-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 100vw;
+.page-section a{
+  text-decoration: none;
+  color: white;
 }
 
 .surf-report{
-    display: flex;
-    height: 500px;
+  display: flex;
+    height: 600px;
+    padding: 100px;
+    margin-top: 50px;
     margin-bottom: 0px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -248,7 +335,7 @@ main{
     justify-content: center;
     -webkit-box-align: center;
     align-items: center;
-    background-image: url(./public/images/surf-report.jpg);
+    background-image: url(/assets/surf-report.jpg);
     background-position: 0 0, 50% 50%;
     background-position-x:0px, 50%;
     background-position-y: 0px, 50%;
@@ -257,22 +344,9 @@ main{
 }
 
 
-.report-btn{
-    width: auto;
-    margin-right: 20px;
-    margin-left: 20px;
-    border: 0px transparent;
-    border-radius: 5px;
-    background-color: var(--primary);
-    background-image: linear-gradient(135deg, #007c79 41%, #a80aba);
-    font-size: 22px;
-    font-weight: 400;
-    text-transform: uppercase;
-}
-
 .led-wall{
-    display: flex;
-    height: 500px;
+  display: flex;
+    height: 700px;
     margin-bottom: 0px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -281,7 +355,7 @@ main{
     justify-content: center;
     -webkit-box-align: center;
     align-items: center;
-    background-image: url(./public/images/Led-wall.jpg);
+    background-image: url(/assets/Led-wall.jpg);
     background-position: 0 0, 50% 50%;
     background-position-x:0px, 50%;
     background-position-y: 0px, 50%;
@@ -290,8 +364,8 @@ main{
 }
 
 .auto-log{
-    display: flex;
-    height: 470px;
+  display: flex;
+    height: 750px;
     margin-bottom: 0px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -300,7 +374,7 @@ main{
     justify-content: center;
     -webkit-box-align: center;
     align-items: center;
-    background-image: url(./public/images/auto-maintenance-log.png);
+    background-image: url(/assets/auto-maintenance-log.png);
     background-position: 0 0, 50% 50%;
     background-position-x:0px, 50%;
     background-position-y: 0px, 50%;
@@ -309,8 +383,8 @@ main{
 }
 
 .e720{
-    display: flex;
-    height: 500px;
+  display: flex;
+    height: 700px;
     margin-bottom: 0px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -319,7 +393,7 @@ main{
     justify-content: center;
     -webkit-box-align: center;
     align-items: center;
-    background-image: url(./public/images/ent720.png);
+    background-image: url(/assets/ent720.png);
     background-position: 0 0, 50% 50%;
     background-position-x:0px, 50%;
     background-position-y: 0px, 50%;
@@ -328,9 +402,9 @@ main{
 }
 
 .run-buddy{
-    display: flex;
-    height: 400px;
-    margin-bottom: 10px;
+  display: flex;
+    height: 650px;
+    margin-bottom: 0px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     flex-direction: column;
@@ -338,7 +412,7 @@ main{
     justify-content: center;
     -webkit-box-align: center;
     align-items: center;
-    background-image: url(./public/images/flipped-hero-image.jpg);
+    background-image: url(/assets/flipped-hero-image.jpg);
     background-position: 0 0, 50% 50%;
     background-position-x:0px, 50%;
     background-position-y: 0px, 50%;
@@ -346,206 +420,30 @@ main{
     background-attachment: scroll, fixed;
 }
 
-#work h3{
-    display: flex;
-    margin-bottom: 5px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    flex-direction: column;
-    -webkit-box-pack: end;
-    justify-content: flex-end;
-    -webkit-box-align: start;
-    align-items: flex-start;
-    font-family: Montserrat,sans-serif;
-    color: var(--primary);
-    font-size: 60px;
-    line-height: 66px;
-    font-weight: 900;
-    text-align: center;
-    letter-spacing: 1px;
-    text-transform: uppercase;
+#contact{
+  width: 100%;
+  align-items: center;
+
+  margin: 0;
+  height: 200px;
 }
 
-#work span{
-    display: flex;
-    margin-bottom: 10px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    flex-direction: column;
-    -webkit-box-pack: end;
-    justify-content: flex-end;
-    -webkit-box-align: start;
-    align-items: flex-start;
-    font-family: Montserrat,sans-serif;
-    color: var(--primary);
-    font-size: 30px;
-    line-height: 66px;
-    font-weight: 900;
-    text-align: center;
-    letter-spacing: 1px;
-    text-transform: uppercase;
+address{
+  padding: 5px 10px;
+  font-style: normal;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
+  flex-wrap: wrap;
+  color: #fff;
 }
 
-#work a{
-    text-decoration: none;
-}
-
-#work a:hover{
-    text-decoration: underline;
-}
-
-.flex-item{
-    min-height: 400px;
-    flex-basis: 97%;
+address a{
+  text-decoration: none;
+  font-style: normal;
+  font-size: 30px;
+  transition: all 0.5s ease-in;
+  margin: 10px 0 0.2rem 0.1rem;
 }
 
 
-.flex-item:hover{
-    background-color: var(--primary);
-}
-
-.flex-item div{
-    background-color: var(--tertiary);
-    padding: 8px 10px;
-}
-
-.flex-item h3{
-    font-size: 50px;
-    color: var(--tertiary);
-}
-
-footer address{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-    height: 100%;
-}
-
-footer{
-    padding: 15px 6% 15px 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    align-items: center;
-    background-color: var(--primary);
-    background-size: cover;
-    width: 100%;
-    height: 150px;
-}
-footer h2{
-    color: var(--secondary);
-    padding: 5px 1% 5px 6%;
-    margin: 0;
-    font-size: 50px;
-    line-height: 1;
-    font-weight: bold;
-    font-family: Montserrat,sans-serif;
-}
-
-footer address a{
-    color: var(--secondary);
-    padding: 5px 10px;
-    text-decoration: none;
-    font-style: normal;
-    font-size: 25px;
-    transition: all 0.5s ease-in;
-    margin: 0 0 0.2rem 0.1rem;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-footer address a:hover{
-    background-size: 100% 88%;
-    color: var(--tertiary)
-}
-footer a:last-child{
-    margin-right: 0;
-}
-
-@media screen and (max-width: 980px){
-    header{
-        padding-bottom: 0;
-        justify-content: center;
-    }
-    header h1{
-        width: 100%;
-        text-align: center;
-    }
-    header nav {
-        margin-top: 10px;
-        width: 100%;
-        justify-content: center;
-    }
-    header nav a{
-        font-size: 25px;
-    }
-    footer h2, footer{
-        text-align: center;
-        width: 100%;
-    }
-    footer a, footer{
-        width: 100%;
-        text-align: center;
-        justify-content: center;
-    }
-    
-}
-
-@media screen and (max-width: 768px){
-    header h1{
-        padding-bottom: 0;
-    }
-    header nav{
-        font-size: 25;
-    }
-    #about{
-        width: auto;
-        display: inherit;
-    }
-    #about p{
-        font-size: 20px;
-    }
-    .auto-log{
-        height: 350px;
-        margin-bottom: 0px;
-    }
-    .e720{
-        height: 400px;
-    }
-    .run-buddy{
-        height: 300px;
-    }
-    footer{
-        height: 250px;
-    }
-    nav{
-        align-self: center;
-    }
-}
-
-@media screen and (max-width: 575px){
-    #runbuddy img{
-        height: 200px;
-    }
-    .hero-banner h2{
-        font-size: 40px;
-    }
-    .page-section h2{
-        font-size: 40px;
-    }
-    .page-section p{
-        padding-right: 7px;
-    }
-    header nav{
-        font-size: 15px;
-    }
-    .page-section img{
-        width: 100%;
-    }
-    .page-section p{
-        text-align: center;
-    }
-}
