--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 :root{
     --primary: #1f1e1e;
     --secondary: #7DF9FF;
-    --tertiary: white
+    --tertiary: white;
+    --breakpoint-xs: 0;
+    --breakpoint-sm: 576px;
+    --breakpoint-md: 768px;
+    --breakpoint-lg: 992px;
+    --breakpoint-xl: 1200px;
 }
 
 body{
@@ -23,7 +28,7 @@ body{
 }
 
 .navbar {
-    position: relative;
+    background-color: var(--primary);
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -66,10 +71,7 @@ body{
     padding-right: 0;
     padding-left: 0;
 }
-.navbar-nav .dropdown-menu {
-    position: static;
-    float: none;
-}
+
 
 .navbar-text {
     display: inline-block;
@@ -91,7 +93,7 @@ body{
     background-color: transparent;
     border: 1px solid transparent;
     border-radius: 0.25rem;
-    color: var(--secondary);
+    color: #7DF9FF;
 }
 .navbar-toggler:hover, .navbar-toggler:focus {
     text-decoration: none;
@@ -105,6 +107,7 @@ body{
     content: "";
     background: 50%/100% 100% no-repeat;
 }
+
 
 .navbar-nav-scroll {
     max-height: 75vh;
@@ -122,10 +125,6 @@ nav h1{
     font-style: normal;
 }
 
-#navbarResponsive{
-    display: inline-block;
-    cursor: pointer;
-}
 
 nav a {
     text-decoration: none;
@@ -137,10 +136,6 @@ nav a {
 
 nav a:hover{
     background-size: 100% 100%;
-}
-
-nav a:last-child{
-    margin-right: 0;
 }
 
 main{
@@ -456,4 +451,16 @@ address a{
     margin: 10px 0 0.2rem 0.1rem;
 }
 
+
+@media (max-width:576px){
+
+}
+
+@media (max-width:786px){
+
+}
+
+@media (max-width:992px){
+    
+}
 
